# dane-kaldi-nl-api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.nlm  Dockerfile.old  Pipfile  README.md  api_util.py  asr.py  base_util.py  docker-entrypoint.sh  init_util.py  lean.Dockerfile  logging_util.py  pyproject.toml  requirements.txt  server.py  transcode.py  work_processor.py
.github/workflows/: aws-ecr.yml  test-code-base.yml
apis/: APIResponse.py  __init__.py  api_util.py
apis/process/: process_api.py
config/: settings-example.py  settings-example.yaml  settings_example.yaml  settings_unit_test.yaml
tests/: conftest.py  pre-commit  unit-test.sh
tests/apis/: basic_search_handler_test.py  conftest.py  o_asr_200.json  work_processor_test.py
tests/unit_tests/: asr_test.py  conftest.py  test_transcode.py  work_processor_test.py
tests/unit_tests/apis/: work_processor_test.py
tests/unit_tests/pid-cache/: unit_test_pid
