[tool.poetry]
name = "dane-kaldi-nl-api"
version = "0.1.0"
description = "API used by beeldengeluid/dane-asr-worker to request ASR processing (using Kaldi_NL)"
authors = ["Jaap Blom <jblom@beeldengeluid.nl>"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "*"
requests = "*"
flask-restx = "*"
werkzeug = "<2.2.0"
flask = "~=2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mockito = "^1.3.3"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
black = "^22.3.0"
mypy = "0.961"
types-requests = "2.28.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "tests/unit_tests",
]
addopts = [
  "--cov",
]

[tool.coverage.run]
omit = [
  "tests/*"
]

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
  )/
)
'''

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = [
  'mockito',
  'yaml',
  'flask_restx',
]
ignore_missing_imports = true
